--- a/SocialMedias.html
+++ b/SocialMedias.html
@@ -41,7 +41,7 @@
                     <a href="Homepage.html">Home</a>
                     <a href="AboutMe.html">About Me</a>
                     <a href="SocialMedias.html">My Social Medias</a>
-                    <a href="AboutHer.html">About Her</a>
+                    <a href="#">About Her</a>
                 </nav>
             </header>
             
