--- a/SocialMedias.html
+++ b/SocialMedias.html
@@ -63,7 +63,7 @@
                                     <p>Instagram</p>
                                 </div>
                                 <div class="img-container">
-                                    <a href="https://www.tiktok.com/@xy_valorant"><img src="png-clipart-tiktok-icon-tech-companies-thumbnail.png" class="image2"></a>
+                                    <a href="https://www.tiktok.com/@insanevictus"><img src="png-clipart-tiktok-icon-tech-companies-thumbnail.png" class="image2"></a>
                                     <p>Tiktok</p>
                                 </div>
                                 <div class="img-container">
@@ -114,3 +114,4 @@
         </div>
     </body>
 </html>
+
