--- a/Homepage.html
+++ b/Homepage.html
@@ -39,6 +39,7 @@
                             
                             <div style="margin: 30px;">
                                 <p> <i> "Do not dwell in the past, do not dream of the future, concentrate the mind on the present." </i> - Buddha  </p>
+                                <p> <i> "We do not see things as they are, we see them as we are." </i> - Random YT shorts  </p>
                             </div>
                             
                             <div style="margin: 30px;">
@@ -69,3 +70,4 @@
         </div>
     </body>
 </html>
+
