--- a/Homepage.html
+++ b/Homepage.html
@@ -26,7 +26,7 @@
                     <a href="Homepage.html">Home</a>
                     <a href="AboutMe.html">About Me</a>
                     <a href="SocialMedias.html">My Social Medias</a>
-                    <a href="Maxxie.html">About Her</a>
+                    <a href="Maxxie.html">Maxxie</a>
                 </nav>
             </header>
             
@@ -70,5 +70,6 @@
         </div>
     </body>
 </html>
+
 
 
