--- a/AboutMe.html
+++ b/AboutMe.html
@@ -29,7 +29,7 @@
                     <a href="Homepage.html">Home</a>
                     <a href="AboutMe.html">About Me</a>
                     <a href="SocialMedias.html">My Social Medias</a>
-                    <a href="#">About Her</a>
+                    <a href="Maxxie.html">Maxxie</a>
                 </nav>
             </header>
             
@@ -93,5 +93,6 @@
         </div>
     </body>
 </html>
+
 
 
