--- a/Maxxie.html
+++ b/Maxxie.html
@@ -21,7 +21,7 @@
                     <a href="Homepage.html">Home</a>
                     <a href="AboutMe.html">About Me</a>
                     <a href="SocialMedias.html">My Social Medias</a>
-                    <a href="AboutHer.html">About Her</a>
+                    <a href="Maxxie.html">Maxxie</a>
                 </nav>
             </header>
             
@@ -76,4 +76,5 @@
             </footer>
         </div>
     </body>
+
 </html>
