--- a/SocialMedias.html
+++ b/SocialMedias.html
@@ -41,7 +41,7 @@
                     <a href="Homepage.html">Home</a>
                     <a href="AboutMe.html">About Me</a>
                     <a href="SocialMedias.html">My Social Medias</a>
-                    <a href="#">About Her</a>
+                    <a href="Maxxie.html">Maxxie</a>
                 </nav>
             </header>
             
@@ -114,4 +114,5 @@
         </div>
     </body>
 </html>
+
 
