--- a/Maxxie.html
+++ b/Maxxie.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="row">
                         <div class="col-3" style="padding-right: 1.5px; padding-left: 1.5px;">
-                            <img src= "Maxxie\Messenger_creation_06CE6B11-405C-43E7-9AB8-DFE72CECEACE.jpeg">
+                            <img src= "Maxxie\20241229_104452.jpg">
                             <img src= "Maxxie\IMG_20250806_051319_938.jpg" >
                         </div>
                         <div class="col-6" style="padding-right: 1.5px; padding-left: 1.5px;">
@@ -78,3 +78,4 @@
     </body>
 
 </html>
+
