--- a/Maxxie.html
+++ b/Maxxie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Her</title>
+        <title>My Daily <3</title>
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="css/bootstrap-grid.css">
         <link rel="stylesheet" href="abouther.css">
@@ -21,7 +21,7 @@
                     <a href="Homepage.html">Home</a>
                     <a href="AboutMe.html">About Me</a>
                     <a href="SocialMedias.html">My Social Medias</a>
-                    <a href="Maxxie.html">Maxxie</a>
+                    <a href="Maxxie.html">My Daily <3</a>
                 </nav>
             </header>
             
@@ -43,7 +43,7 @@
                             <img src= "Maxxie\IMG_20250806_051319_938.jpg" >
                         </div>
                         <div class="col-3" style="padding-right: 1.5px; padding-left: 1.5px;">
-                            <img src= "Maxxie\IMG_20241229_212554_0687.jpg">
+                            <img src= "Maxxie/FB_IMG_1740288779598.jpg">
                             <img src= "Maxxie\IMG_20241130_083157_0931.jpg" >
                         </div>
                     </div>
@@ -78,5 +78,6 @@
     </body>
 
 </html>
+
 
 
